// Vitest Snapshot v1

exports[`react > defineComponent() > context > slot() > should render react component with aggregated default slot and named default slot 1`] = `
<div>
  <span>
    Default Slot Child 1
  </span>
  <span>
    Named Default Slot Child
  </span>
  <span>
    Default Slot Child 2
  </span>
</div>
`;

exports[`react > defineComponent() > context > slot() > should render react component with default slot, multiple children 1`] = `
<div>
  <span>
    Child 1
  </span>
  <span>
    Child 2
  </span>
  <span>
    Child 3
  </span>
</div>
`;

exports[`react > defineComponent() > context > slot() > should render react component with default slot, one child 1`] = `
<div>
  <span>
    Child
  </span>
</div>
`;

exports[`react > defineComponent() > context > slot() > should render react component with named default slot 1`] = `
<div>
  <span>
    Child
  </span>
</div>
`;

exports[`react > defineComponent() > context > slot() > should render react component with named slots 1`] = `
<div>
  <span>
    Header
  </span>
  <span>
    Body
  </span>
  <span>
    Footer
  </span>
</div>
`;

exports[`react > defineComponent() > should render component 1`] = `<div />`;

exports[`react > defineComponent() > should render component with state 1`] = `
<button>
  0
</button>
`;

exports[`react > defineComponent() > should render component with state and props 1`] = `
<button>
  1
</button>
`;

exports[`react > defineComponent() > should render component with state, props, and onClick state function 1`] = `
<button>
  2
</button>
`;
